<resources>
    <string name="app_name">条码管理系统</string>
    <string-array name="subjects">
        <item>PRD</item>
        <item>QAS</item>
    </string-array>
    <string-array name="storage_locations">
        <item></item>
        <item>1002</item>
        <item>test02</item>
    </string-array>
    <string name="title_po_storage">采购入库</string>
    <string name="title_po_receive">采购收货</string>
    <string name="title_po_shelving">入库上架</string>
    <string name="text_material_doc_num">物料凭证号</string>
    <string name="text_goods_bin">货位</string>
    <string name="text_goods_bin_maturity_date">货架到期日</string>
    <string name="text_goods_supplier_batch">供应商批次</string>
    <string name="text_input_material_doc_num">请输入物料凭证号</string>
    <string name="text_input_po_num">请输入采购订单号</string>
    <string name="text_po_number">采购订单号</string>
    <string name="text_vendor">供应商</string>
    <string name="text_operation">操作</string>
    <string name="sap_url_material_doc_specific">/sap/opu/odata/sap/API_MATERIAL_DOCUMENT_SRV/A_MaterialDocumentHeader</string>
    <string name="text_to_material_doc_error">过账失败，请检查</string>
    <string name="text_to_material_doc_success">过账成功，物料凭证为:</string>
    <string name="text_to_po_receive_create_success">采购订单收货成功，物料凭证为:</string>
    <string name="text_po_title">采购收货</string>
    <string name="text_material_title">入库上架</string>
    <string name="text_po_doc_num">采购订单号</string>
    <string name="text_po_storage_location">存储地点</string>
    <string name="text_po_receive_sting_error">请先补充存储地点或数量再过账</string>
    <string name="text_po_receive_post">收货过账</string>
    <string name="text_material_not_same">扫码物料和行项目物料不一致，请检查</string>
    <string name="text_storage_bin_not_same">扫码货位和行项目货位不一致，请检查</string>
    <string name="text_material_posting_check_null_error">确认货位和物料不能为空</string>
    <string name="text_storage_bin_city_suzhou">4</string>
    <string name="text_storage_bin_city_beijing">8</string>
    <string name="text_login_user_city_suzhou">苏州</string>
    <string name="text_login_user_city_beijing">北京</string>
    <string name="title_production_storage">生产入库</string>
    <string name="text_plant">工厂</string>
    <string name="text_ori_location">源库存地点</string>
    <string name="text_to_location">目标库存地点</string>
    <string name="text_production_or_storage_bin_error">请先补充目标库存地点或者行项目货位号再过账</string>
    <string name="title_material_picking">物料领用</string>
    <string name="text_confirm_delete_all_material">确定删除所有物料吗？</string>
    <string name="error_no_material_for_delete">尚未添加物料，无法删除</string>
    <string name="text_select">选择</string>
    <string name="text_ori_bin">所在货位</string>
    <string name="text_confirm_bin">确认货位</string>
    <string name="text_ready_picking">开始拣配</string>
    <string name="sap_url_material_description_specific">/sap/opu/odata/sap/API_CLFN_PRODUCT_SRV/A_ProductDescription</string>
    <string name="text_item_on_least_select_one">未选中任何数据</string>
    <string name="text_material_create_document_success">物料领用过账成功！生成物料凭证：</string>
    <string name="default_environment">Q</string>
    <string name="sap_url_host">https://my300472-api.saps4hanacloud.cn.p</string>
    <string name="sap_url_host_q">https://my300472-api.saps4hanacloud.cn</string>
    <string name="sap_url_login">/sap/opu/odata/sap/YY1_DPA_USER_LOGIN_CDS/YY1_DPA_USER_LOGIN</string>
    <string name="sap_username">API_PDA_USER</string>
    <string name="sap_password">NqqetLojm@NvzjTfTiPcQqogJsvqLPdEG8Ktpmfq</string>
    <string name="sap_login_error">用户名或密码不正确，请检查</string>
    <string name="sap_url_material_header">/sap/opu/odata/sap/API_MATERIAL_DOCUMENT_SRV/A_MaterialDocumentHeader</string>
    <string name="sap_url_material_item">/sap/opu/odata/sap/API_MATERIAL_DOCUMENT_SRV/A_MaterialDocumentItem</string>
    <string name="sap_url_material_create">/sap/opu/odata/sap/API_MATERIAL_DOCUMENT_SRV/A_MaterialDocumentHeader</string>
    <string name="sap_url_material_cancel">/sap/opu/odata/sap/API_MATERIAL_DOCUMENT_SRV/Cancel</string>
    <string name="sap_url_po_header">/sap/opu/odata/sap/API_PURCHASEORDER_PROCESS_SRV/A_PurchaseOrder</string>
    <string name="sap_url_po_item">/sap/opu/odata/sap/API_PURCHASEORDER_PROCESS_SRV/A_PurchaseOrderItem</string>
    <string name="sap_url_batch_char_value_get">/sap/opu/odata/sap/API_BATCH_SRV/BatchCharcValue</string>
    <string name="sap_url_supplier_update">/sap/opu/odata/sap/API_BATCH_SRV/Batch</string>
    <string name="sap_url_supplier_name">/sap/opu/odata/sap/API_BUSINESS_PARTNER/A_Supplier</string>
    <string name="sap_url_get_material_description">/sap/opu/odata/sap/API_CLFN_PRODUCT_SRV/A_ProductDescription</string>
    <string name="sap_url_get_material_stock">/sap/opu/odata/sap/API_MATERIAL_STOCK_SRV/A_MatlStkInAcctMod</string>
    <string name="text_posting_error">请先扫描货位号再过账</string>
    <string name="text_batch_suppler_error">更新供应商批次失败，请检查</string>
    <string name="text_batch_char_value_exist_error">货位已存在值，无法更新，请手动维护</string>
    <string name="text_batch_char_value_update_success">上架完成，货位已更新</string>
    <string name="text_batch_char_value_update_failed">货位更新失败，请检查</string>
    <string name="text_batch_char_value_null">批次信息不存在，请检查</string>
    <string name="text_url_get_error">请求访问失败，请检查</string>
    <string name="sap_url_permission">/sap/opu/odata/sap/ZCDS_UPERMISSION_CDS/ZCDS_UPERMISSION</string>
    <string name="sap_url_client">\?sap-client=100</string>
    <string name="sap_url_plant">/sap/opu/odata/sap/ZSTORAGELOCATION_CDS/ZSTORAGELOCATION</string>
    <string name="sap_url_logistics_provider">/sap/opu/odata/sap/ZCDS_LOGISTICS_PROVIDER_CDS/ZCDS_LOGISTICS_PROVIDER</string>
    <string name="sap_url_material">/sap/opu/odata/sap/ZCDS_PDA_MATERIAL_CDS/ZCDS_PDA_MATERIAL</string>
    <string name="sap_url_material_picking">/sap/opu/odata/sap/ZCDS_PDA_MATERIAL_PICKING_CDS/ZCDS_PDA_MATERIAL_PICKING</string>
    <string name="sap_url_po">/sap/opu/odata/sap/ZPDA_PO_DOWNLOAD_CDS/ZPDA_PO_DOWNLOAD</string>
    <string name="sap_url_po_posting">/sap/pda_goodsmvt</string>
    <string name="sap_url_stock">/sap/opu/odata/sap/ZCDS_PDA_BATCH_STOCK_CDS/ZCDS_PDA_BATCH_STOCK</string>
    <string name="sap_url_posting">/sap/opu/odata/sap/API_MATERIAL_DOCUMENT_SRV/A_MaterialDocumentHeader</string>
    <string name="sap_url_sales_invoice">/sap/opu/odata/sap/ZCDS_PDA_SALES_INVOICE_CDS/ZCDS_PDA_SALES_INVOICE</string>
    <string name="sap_url_sales_invoice_sn">/sap/opu/odata/sap/ZCDS_PDA_SALES_INVOICE_SN_CDS/ZCDS_PDA_SALES_INVOICE_SN</string>
    <string name="sap_url_prototype_borrow">/sap/opu/odata/sap/ZCDS_PDA_MATERIAL_LEND_CDS/ZCDS_PDA_MATERIAL_LEND</string>
    <string name="sap_url_picking">/sap/opu/odata/sap/ZCDS_PDA_MATERIAL_PICKING_CDS/ZCDS_PDA_MATERIAL_PICKING</string>
    <string name="sap_url_material_voucher">/sap/opu/odata/sap/ZCDS_MATERIAL_VOUCHER_CDS/ZCDS_MATERIAL_VOUCHER</string>
    <string name="sap_url_stock_in_out">/sap/opu/odata/sap/ZCDS_PDA_STOCK_IN_OUT_CDS/ZCDS_PDA_STOCK_IN_OUT</string>
    <string name="sap_url_order_invoice_others">/sap/opu/odata/sap/ZCDS_PDA_MATERIAL_ALL_CDS/ZCDS_PDA_MATERIAL_ALL</string>
    <string name="sap_url_sales_invoice_posting">/sap/pda_outb_dn</string>
    <string name="sap_url_sales_invoice_posting_temp">/sap/pda_outb_dn_chg</string>
    <string name="sap_url_material_lend">/sap/opu/odata/sap/ZCDS_PDA_MATERIAL_LEND_CDS/ZCDS_PDA_MATERIAL_LEND</string>
    <string name="sap_url_transfer_order">/sap/opu/odata/sap/ZCDS_PDA_TRANSFER_ORDER_CDS/ZCDS_PDA_TRANSFER_ORDER</string>
    <string name="sap_url_user">/sap/opu/odata/sap/ZCDS_UMAIN_DATA_CDS/ZCDS_UMAIN_DATA</string>
    <string name="sap_url_serialInfo">/sap/serial_query</string>
    <string name="sap_url_shipping_label">/sap/opu/odata/sap/ZCDS_SHIPPING_LABEL_CDS/ZCDS_SHIPPING_LABEL</string>
    <string name="sap_url_receive_label">/sap/opu/odata/sap/ZCDS_RECEIVE_LABEL_CDS/ZCDS_RECEIVE_LABEL</string>
    <string name="sap_url_po_return">/sap/opu/odata/sap/zcds_pda_return_po_dn_cds/ZCDS_PDA_RETURN_PO_DN</string>
    <string name="sap_url_po_return_posting">/sap/pda_goodsmvt_re</string>
    <string name="sap_url_po_sub_contract_out">/sap/opu/odata/sap/ZCDS_PDA_SUBCONTRACT_PO_DN_CDS/ZCDS_PDA_SUBCONTRACT_PO_DN</string>
    <string name="sap_url_po_sub_contract_out_post">/sap/pda_goodsmvt_su</string>
    <string name="sap_url_po_sub_contract_in">/sap/opu/odata/sap/ZCDS_PDA_SUBC_PO_DN_CDS/ZCDS_PDA_SUBC_PO_DN</string>
    <string name="sap_url_po_sub_contract_in_post">/sap/pda_goodsmvt_sc</string>
    <string name="sap_url_po_gi">/sap/opu/odata/sap/ZCDS_PDA_PO_GI_DOWNLOAD_CDS/ZCDS_PDA_PO_GI_DOWNLOAD</string>
    <string name="sap_url_po_gi_post">sap/pda_po_gi</string>
    <string name="sap_url_po_pgr">/sap/opu/odata/sap/ZCDS_PDA_PO_PGR_DOWNLOAD_CDS/ZCDS_PDA_PO_PGR_DOWNLOAD</string>
    <string name="sap_url_po_pgr_post">sap/pda_po_pgr</string>
    <string name="sap_url_po_gr">/sap/opu/odata/sap/ZCDS_PDA_PO_GR_DOWNLOAD_CDS/ZCDS_PDA_PO_GR_DOWNLOAD</string>
    <string name="sap_url_po_gr_post">sap/pda_po_gr</string>
    <string name="storage_location_all">0001</string>
    <string name="plant_all">0001</string>
    <string name="function_all">99</string>
    <string name="function_all_code">99</string>
    <string name="material_voucher_order_by">$orderby=rspos</string>
    <string name="filter_shipment_status">ShipmentStatus eq \'A\'</string>
    <string name="filter_language">Language eq \'ZH\'</string>
    <string name="url_language_param">(p_language=\'1\')/Set</string>
    <string name="header_language_key">Accept-Language</string>
    <string name="header_language_value">1</string>
    <string name="text_info">信息</string>
    <string name="text_address">地址</string>
    <string name="text_scan">扫码</string>
    <string name="text_delete">删除</string>
    <string name="text_company_name_a">组织A</string>
    <string name="text_company_name_b">组织B</string>
    <string name="text_company_name_c">组织C</string>
    <string name="text_scan_out">扫码出库</string>
    <string name="text_scan_in">扫码入库</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="text_master_data">基础数据</string>
    <string name="text_po_storage">采购入库</string>
    <string name="error_order_not_found">无此单据、或单据已发货、或用户无权限，请确认输入的单据号码</string>
    <string name="error_no_material_data">请下载物料数据</string>
    <string name="error_no_location_data">请下载库存地点数据</string>
    <string name="text_serial_number">序列号</string>
    <string name="text_confirm_date">过账日期</string>
    <string name="text_update_user_data">请更新用户数据！</string>
    <string name="text_version">版本信息</string>
    <string name="login_title">PDA</string>
    <string name="login_account">账号</string>
    <string name="login_app_title">条码管理系统</string>
    <string name="login_pwd">密码</string>
    <string name="login_environ">环境</string>
    <string name="login_btn_text">登录</string>
    <string name="alert_waiting">正在连接服务请稍候...</string>
    <string name="login_failed">登录失败</string>
    <string name="text_material">物料</string>
    <string name="text_material_number">物料编码</string>
    <string name="text_plant_desc">工厂描述</string>
    <string name="text_location">库存地点</string>
    <string name="text_location_desc">库存地点描述</string>
    <string name="text_material_desc">物料描述</string>
    <string name="text_unit">单位</string>
    <string name="text_quantity">数量</string>
    <string name="text_batch">批次</string>
    <string name="text_batch_management">批次管理</string>
    <string name="text_sn_management">序列号管理</string>
    <string name="text_bar_code">条形码</string>
    <string name="text_search">查询</string>
    <string name="text_detail">详细</string>
    <string name="text_item">行号</string>
    <string name="text_ok">确定</string>
    <string name="text_order_number">单据号</string>
    <string name="text_order_date">单据日期</string>
    <string name="text_receive_done">收货完成</string>
    <string name="text_component_quantity">数量</string>
    <string name="text_component_consume_quantity">消耗数量</string>
</resources>