<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SnSearchActivity">

    <View
        android:id="@+id/v_top_line"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="1dp"
        android:background="@color/text_light_gray_color" />
    <LinearLayout
        android:id="@+id/ll_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_top_line"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_material_number"
            android:layout_marginLeft="2dp"
            android:background="@color/bg_colorFourthPrimary"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="@dimen/text_size_list_header"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_material_desc"
            android:layout_marginLeft="2dp"
            android:background="@color/bg_colorFourthPrimary"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="@dimen/text_size_list_header"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_batch"
            android:layout_marginLeft="2dp"
            android:background="@color/bg_colorFourthPrimary"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="@dimen/text_size_list_header"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_serial_number"
            android:layout_marginLeft="2dp"
            android:background="@color/bg_colorFourthPrimary"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="@dimen/text_size_list_header"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_plant_desc"
            android:layout_marginLeft="2dp"
            android:background="@color/bg_colorFourthPrimary"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="@dimen/text_size_list_header"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/text_location"
            android:layout_marginLeft="2dp"
            android:background="@color/bg_colorFourthPrimary"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="@dimen/text_size_list_header"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_location_desc"
            android:layout_marginLeft="2dp"
            android:background="@color/bg_colorFourthPrimary"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="@dimen/text_size_list_header"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/text_quantity"
            android:layout_marginLeft="2dp"
            android:background="@color/bg_colorFourthPrimary"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="@dimen/text_size_list_header"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
    <View
        android:id="@+id/v_bottom_line"
        android:layout_width="match_parent"
        android:layout_below="@id/ll_list_header"
        android:layout_height="1dp"
        android:background="@color/text_light_gray_color" />

    <ListView
        android:id="@+id/lv_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/v_bottom_line"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:divider="@color/colorDivider"></ListView>


</RelativeLayout>