<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PoOrderDetailActivity">

    <View
        android:id="@+id/v_top_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/text_light_gray_color" />

    <LinearLayout
        android:id="@+id/ll_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_top_line"
        android:gravity="center_vertical"
>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:layout_marginStart="2dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@color/bg_colorFourthPrimary"
            android:gravity="center"
            android:text="@string/text_item"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:gravity="center"
            android:text="@string/text_material"
            android:layout_marginLeft="1dp"
            android:background="@color/bg_colorFourthPrimary"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.8"
            android:gravity="center"
            android:layout_marginLeft="1dp"
            android:text="@string/text_material_desc"
            android:background="@color/bg_colorFourthPrimary"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.2"
            android:layout_marginLeft="1dp"
            android:text="@string/text_batch"
            android:background="@color/bg_colorFourthPrimary"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/tv_quantity_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="1dp"
            android:text="@string/text_component_quantity"
            android:textSize="14sp"
            android:background="@color/bg_colorFourthPrimary"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/tv_scan_quantity_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="1dp"
            android:text="@string/text_component_consume_quantity"
            android:background="@color/bg_colorFourthPrimary"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="1dp"
            android:layout_marginEnd="2dp"
            android:text="@string/text_operation"
            android:background="@color/bg_colorFourthPrimary"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <View
        android:id="@+id/v_bottom_line"
        android:layout_width="match_parent"
        android:layout_below="@id/ll_list_header"
        android:layout_height="1dp"
        android:background="@color/text_light_gray_color" />

    <ListView
        android:id="@+id/lv_purchase_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_btns"
        android:layout_below="@id/v_bottom_line"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:divider="@color/colorDivider">

    </ListView>

    <LinearLayout
        android:id="@+id/ll_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_post"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/bg_colorSecondPrimary"
            android:onClick="ok"
            android:padding="8dp"
            android:text="@string/text_ok"
            android:textColor="@color/text_colorSecondPrimary"
            android:textSize="@dimen/text_size_btn">

        </Button>
    </LinearLayout>
</RelativeLayout>