<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.D66TestActivity">

    <LinearLayout
        android:id="@+id/rl_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/tv_label_material_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="left"
            android:textSize="@dimen/text_size_label_title"
            android:text="@string/text_material_number" />

        <EditText
            android:id="@+id/et_material_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="3"
            android:layout_toRightOf="@id/tv_label_material_number"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:textSize="@dimen/text_size_label_text" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="1dp"
            android:text="@string/text_search"
            android:background="@color/bg_colorSecondPrimary"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="@dimen/text_size_label_text"
            android:textColor="@color/text_colorSecondPrimary"
            android:onClick="search"/>

    </LinearLayout>

    <View
        android:id="@+id/v_top_line"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="1dp"
        android:layout_below="@id/rl_search"
        android:background="@color/text_light_gray_color" />
    <LinearLayout
        android:id="@+id/ll_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_top_line"
        android:gravity="center_vertical"
        android:background="@color/bg_colorFourthPrimary"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"

            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@color/bg_colorFourthPrimary"
            android:gravity="center"
            android:text="@string/text_material"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="left"
            android:text="@string/text_material_desc"
            android:layout_marginLeft="1dp"
            android:background="@color/bg_colorFourthPrimary"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"

            android:textSize="14sp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="center"
            android:layout_marginLeft="1dp"
            android:text="@string/text_unit"
            android:background="@color/bg_colorFourthPrimary"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="1dp"
            android:text="@string/text_batch_management"
            android:background="@color/bg_colorFourthPrimary"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_marginLeft="1dp"
            android:text="@string/text_sn_management"
            android:background="@color/bg_colorFourthPrimary"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="1dp"
            android:text="@string/text_bar_code"
            android:background="@color/bg_colorFourthPrimary"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

    <View
        android:id="@+id/v_bottom_line"
        android:layout_width="match_parent"
        android:layout_below="@id/ll_list_header"
        android:layout_marginBottom="8dp"
        android:layout_height="1dp"
        android:background="@color/text_light_gray_color" />

    <ListView
        android:id="@+id/lv_material"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/v_bottom_line"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:divider="@color/colorDivider">

    </ListView>
</RelativeLayout>