<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PoOrderResultActivity">

    <View
        android:id="@+id/v_top_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/text_light_gray_color" />

    <LinearLayout
        android:id="@+id/ll_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_colorFourthPrimary"
        android:layout_below="@+id/v_top_line">
      <TextView
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1.5"
          android:paddingTop="8dp"
          android:paddingBottom="8dp"
          android:layout_marginStart="8dp"
          android:gravity="center"
          android:text="@string/text_order_number"
          android:textSize="14sp"
          android:textColor="@color/colorPrimary"/>
      <TextView
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="2"
          android:gravity="center"
          android:text="@string/text_order_date"
          android:paddingTop="8dp"
          android:paddingBottom="8dp"
          android:textSize="14sp"
          android:textColor="@color/colorPrimary"/>
      <TextView
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:gravity="center"
          android:text="@string/text_receive_done"
          android:paddingTop="8dp"
          android:paddingBottom="8dp"
          android:textSize="14sp"
          android:textColor="@color/colorPrimary"/>
      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_marginLeft="1dp"
          android:layout_marginRight="8dp"
          android:text="@string/text_detail"
          android:gravity="center"
          android:paddingTop="8dp"
          android:paddingBottom="8dp"
          android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <View
        android:id="@+id/v_bottom_line"
        android:layout_width="match_parent"
        android:layout_below="@id/ll_list_header"
        android:layout_height="1dp"
        android:background="@color/text_light_gray_color" />

    <ListView
        android:id="@+id/lv_purchase_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@id/v_bottom_line"
        android:divider="@color/colorDivider">

    </ListView>


  </RelativeLayout>